assets/css/styles.css
/* ======= GOOGLE FONTS ======== */
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;1,400;1,500&display=swap');
/* ======= VARIABLES CSS ====== */
:root {
    --header-height: 3rem;

    /* ====== Colors ====== */
    --first-color: #FCA4A6;
    --first-color-dark: #C1576A;
    --first-color-darken: #A83E51;
    --white-color: #FCF8F8;

    /* ====== Font and Typography */
    --body-font: 'Poppins', sans-serif;
    --big-font-size: 2.5rem;
    --normal-font-size: .938rem;

    /* ====== z index ======= */
    --z-fixed: 100;
}

@media screen and (min-width: 768px) {
    :root {
        --big-font-size: 5rem;
        --normal-font-size: 1rem;
    }
}

/*===== BASE ====*/
*,::before,::after {
    box-sizing: border-box;
}

body {
    margin: var(--header-height) 0 0 0;
    padding: 0;
    font-family: var(--body-font);
    font-size: var(--normal-font-size);
    font-weight: 500;
}

h1, p, ul {
    margin: 0;
}

ul {
    padding: 0;
    list-style: none;
}

a {
    text-decoration: none;
}

img {
    max-width: 100%;
    height: auto;
}

/*===== LAYOUT ===== */
.bd-grid {
    max-width: 1024px;
    display: grid;
    grid-template-columns: 100%;
    column-gap: 2rem;
    width: calc(100% - 2rem);
    margin-left: 1rem;
    margin-right: 1rem;
}

.l-header {
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
    z-index: var(--z-fixed);
    background-color: var(--first-color);
}

/*===== NAV ===== */
.nav {
    height: var(--header-height);
    display: flex;
    justify-content: space-between;
    align-items: center;
}

@media screen and (max-width: 768px) {
    .nav_menu {
        position: fixed;
        top: 0;
        right: -100%;
        width: 70%;
        height: 100%;
        padding: 3.5rem 1.5rem 0;
        background: rgba(255, 255, 255, .3);
        backdrop-filter: blur(10px);
        transition: .5;
    }
}

.nav__close {
    position: absolute;
    top: .75rem;
    right: 1rem;
    font-size: 1.5rem;
    cursor: pointer;
}

.nav__item {
    margin-bottom: 2rem;
}

.nav__close, .nav__link, .nav__logo, .nav__toggle {
    color: var(--white-color);
}

.nav__link:hover {
    color: var(--first-color-dark);
}

.nav__toggle {
    font-size: 1.5rem;
    cursor: pointer;
}

/* Show menu */
.show {
    right: 0;
}

/*===== HOME =====*/
.home {
    background-color: var(--first-color);
    overflow: hidden;
}

.home__container {
    height: calc(100vh - var(--header-height));
    grid-template-rows: repeat(2, max-content);
    row-gap: 1.5rem;
}

.home__img {
    position: relative;
    padding-top: 1.5rem;
    justify-self: center;
    width: 302px;
    height: 233px;
}

.home__img img {
    position: absolute;
    top: 0;
    left: 0;
}
/*===== MEDIA QUERIES =====*/

